fix(month): align week and day together

--- a/src/components/Day/Day.css
+++ b/src/components/Day/Day.css
@@ -1,5 +1,6 @@
 .day {
   display: flex;
   flex: 1;
+  max-width: 32px;
   position: relative;
 }
